# emergencias-chatbot-dagma

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Procfile  README.md  SKILLS.md  TOOLS.md  alembic.ini  docker-compose.yml  migrate.sh  pyproject.toml  railway-admin.toml  railway.toml  requirements.txt  start.sh  test_api.http
.claude/: CLAUDE.md  settings.json  settings.local.json
.claude/rules/: audio-processing.md  code-style.md  database-ops.md  fastapi-routing.md  langchain-extraction.md  security.md  testing.md
.claude/skills/: audio-processing.md  autodream.md  context-compression.md  database-ops.md  fastapi-routing.md  langchain-extraction.md  testing.md  whatsapp-integration.md
admin/: Dockerfile  requirements.txt
admin/app/: main.py
alembic/: env.py
alembic/versions/: 24e6267fa7a5_refactor_tipos_emergencia_y_tablas_.py  5e9056de68eb_add_admin_user_profile_fields.py  aabee4bd2a9d_initial_schema.py  c199d85ca8af_add_seguimiento_historial.py  cdcf3b874e67_remove_postgis_geom_column.py  d6411f695d84_add_estado_asignado_a.py  de55d609799e_add_admin_users_table.py  e853e398199d_canonical_estados_backfill.py
app/: main.py
app/core/: config.py  database.py
app/models/: emergencia.py
app/routers/: chat_ui.py  reportes.py  test_chat.py  whatsapp.py
app/schemas/: emergencia.py
app/services/: extraccion.py  persistencia.py  transcripcion.py
chatbot/: Dockerfile  requirements.txt
chatbot/app/: main.py
shared/core/: __init__.py  config.py  database.py
shared/models/: __init__.py  emergencia.py
shared/schemas/: __init__.py  admin.py  emergencia.py
shared/services/: extraccion.py  persistencia.py  transcripcion.py
tests/: conftest.py  test_schemas.py  test_webhook.py
tests/admin/: conftest.py  helpers.py  test_auth.py  test_crear_reporte.py  test_gestion.py  test_gestion_avanzado.py  test_health.py  test_historial.py  test_reportes.py  test_reportes_filtros.py  test_seguimiento.py
tests/chatbot/: conftest.py  (+1 more)
(+11 files in other folders)
