[project]
name = "emergencias-dagma-chatbot"
version = "0.1.0"
description = "Backend para atención de emergencias ambientales vía WhatsApp - DAGMA Cali"
requires-python = ">=3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["app", "chatbot", "admin", "shared"]
omit = ["*/tests/*", "*/alembic/*", "**/__init__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 70

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "W",   # pycodestyle warnings
    "B",   # flake8-bugbear — common bugs and design issues
    "UP",  # pyupgrade — modernize Python syntax
    "N",   # pep8-naming
    "S",   # flake8-bandit — security
]
ignore = [
    "S101",  # assert statements (used in tests)
    "S105",  # hardcoded passwords (false positives in tests)
    "S106",  # hardcoded passwords in function args (false positives in tests)
    "B008",  # function calls in argument defaults (FastAPI Depends pattern)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S", "N"]  # relax security and naming in tests

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
no_strict_optional = true
follow_imports = "silent"
